# htmlfilemerger

./: .gitignore  README.MD
htmlmerger/: __main__.py  htmlmerger.py  myutils.py
htmlmerger/htmlmerger/: __main__.py
htmlmerger/test/: test_basic.py
htmlmerger/test/testfiles/: cssfile.css
htmlmerger/test_manual/case 1/: javascript.js  test.html
src/: README.MD  setup.cfg
src/htmlmerger/: README.MD  __main__.py
src/htmlmerger/htmlmerger/: htmlmerger.py  main.py  main_specific.py  myutils.py
src/htmlmerger/htmlmerger/main/: main.py
src/htmlmerger/htmlmerger/main_generic/: main.py
src/htmlmerger/test/: test_basic.py  test_system.py
src/htmlmerger/test_manual/case 1/: run.sh  test_merged.html
src/test/test_auto/: test_advanced.py  test_basic.py  test_system.py
test/: test_advanced.py
test/testfiles/: javascriptfile.js
test_manual/case 1/: run.sh
