[metadata]
name = htmlmerger

version = 0.1.1
author = DarkTrick-4fb5f723849d32782e723c34bfd132e442d378d7
description = Merge html/js/css/images into one single independent html file.
url = https://github.com/DarkTrick/python_project_template
project_urls =
    Bug Tracker = https://github.com/DarkTrick/python_project_template/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = htmlmerger
packages = find:
python_requires = >=3.2

# set root directory
[options.packages.find]
where = htmlmerger

[options.entry_points]
console_scripts =
    htmlmerger = htmlmerger.main.main:generic_main

